--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Express JS Copy</title>
+  <script src="https://use.fontawesome.com/b4abfb5304.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="en-doc scroll">
 <section id="home-content">
 
   <div class="header">
+  <div id="mobile-menu">
+  <div id="nav-button" class="fa fa-bars fa-2x button"></div>
+  </div>
     <section id = "logo">
       <a href="" class="express">Express</a>
     </section>
